# BTSPP

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  editorconfig  format.sh
implementation/: .clang-format  CMakeLists.txt  Doxyfile  format.sh
implementation/include/: approximation.hpp  commandinterpreter.hpp  definitions.hpp  draw.hpp  euclideandistancegraph.hpp  events.hpp  exactsolver.hpp  exceptions.hpp  gui.hpp
implementation/include/draw/: buffers.hpp  definitions.hpp  draw.hpp  events.hpp  forms.hpp  gui.hpp  openglerrors.hpp  openglhandler.hpp  openglsetup.hpp  shader.hpp  variables.hpp  vertexattributes.hpp  visualization.hpp
implementation/include/exception/: exceptions.hpp
implementation/include/graph/: algorithm.hpp  geometry.hpp  graph.hpp  ostream.hpp  storage.hpp  utils.hpp
implementation/include/solve/: approximation.hpp  commonfunctions.hpp  definitions.hpp  euclideandistancegraph.hpp  exactsolver.hpp
implementation/include/utility/: datacontainer.hpp  utils.hpp
implementation/lib/imgui/: CMakeLists.txt
implementation/src/: approximation.cpp  commandinterpreter.cpp  draw.cpp  euclideandistancegraph.cpp  events.cpp  exactsolver.cpp  gui.cpp  main.cpp  variables.cpp
implementation/src/draw/: buffers.cpp  draw.cpp  events.cpp  forms.cpp  gui.cpp  openglerrors.cpp  openglhandler.cpp  openglsetup.cpp  shader.cpp  variables.cpp  vertexattributes.cpp  visualization.cpp
implementation/src/graph/: algorithm.cpp  graph.cpp
implementation/src/solve/: approximation.cpp  commonfunctions.cpp  euclideandistancegraph.cpp  exactsolver.cpp
include/: commandinterpreter.hpp
include/draw/: buffers.hpp  definitions.hpp  draw.hpp  drawdata.hpp  events.hpp  gui.hpp  openglerrors.hpp  shader.hpp  variables.hpp  visualisation.hpp  visualization.hpp
include/exception/: exceptions.hpp
include/graph/: algorithm.hpp  geometry.hpp  graph.hpp  utils.hpp
include/solve/: approximation.hpp  commonfunctions.hpp  definitions.hpp  euclideandistancegraph.hpp  exactsolver.hpp
include/utility/: utils.hpp
lib/graph/: CMakeLists.txt
lib/graph/include/: algorithm.hpp  exceptions.hpp  geometry.hpp  graph.hpp  ostream.hpp  utils.hpp
lib/graph/src/: algorithm.cpp  graph.cpp
src/: commandinterpreter.cpp  main.cpp
src/draw/: buffers.cpp  draw.cpp  drawdata.cpp  events.cpp  gui.cpp  openglerrors.cpp  shader.cpp  variables.cpp  visualisation.cpp  visualization.cpp
src/graph/: algorithm.cpp  graph.cpp
src/solve/: approximation.cpp  commonfunctions.cpp  euclideandistancegraph.cpp  exactsolver.cpp
tex/: .latexmkrc  Masterarbeit.tex
tex/appendix/: acronyms-old.tex  acronyms.sty  acronyms.tex  bibliography.bib
tex/content/: acronyms.tex  approximation.tex  introduction.tex  prerequisites.tex
